# avaprodetailing_bot_1

./: .flake8  .gitignore  Dockerfile  README.md  app.Dockerfile  bot.Dockerfile  docker-compose.app.yaml  entrypoint.sh  env.example  main.py  pyproject.toml
.github/workflows/: backend.yml
backend/: alembic.ini  ava.sqlite3
backend/alembic/: env.py
backend/alembic/versions/: 0253b469bda8_renew.py  0a17ab2ba466_add_history_models_for_each_main_models_.py  0cb55162345b_history_added.py  27a2c8778d50_first.py  294f07522dd8_add_user_and_car_models_with_.py  2aa49f48e625_added_loyality.py  3ffbba22ec4e_added_loyality.py  47410153bc7a_add_car_model.py  4ba1aa7399d7_add_car_model.py  5b10c90bc6bd_fixed_loyality.py  5e376a101a2e_add_car_model.py  5f4afe9a9881_first_migration.py  7e04ee801c64_first.py  7feaf1b41032_first_migration1.py  946f7946838a_first_migration1.py  95f547949523_test.py  9aaa94e32e56_first.py  9ef1e27d52eb_first.py  9f87e504c499_first_migration.py  a5baa1753ab2_first_migration.py  bafa60a0ef4e_fixed_loyality.py  bf25ac8010fc_.py  c62e323c8778_first_migration.py  cecd4e457f90_history_added.py  d1e311cc96d4_add_payment_model_and_relationship_in_.py  da7e43378af8_first_migration.py  ed3cf9a6c957_add_user_models.py  f3e4fc14a7d2_first.py  fcb5cd94bf6e_first_migration.py  fe5f62f7fc09_initial.py  (+1 more)
backend/app/: main.py
backend/bot/: main.py  models.py
bot/: bot.log.1  config.py  constants.py  keyboards.py  main.py  messages.py  payment.py  pdf.py  polling.main.py  webhook.main.py
infra/: ava.conf  default.conf  docker-compose.yaml  nginx.conf
(+52 files in other folders)
